MotionInclude/Public/ADVMOT.bas


Declare Function Acm_GpGetCmdVel Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByRef CmdVel As Double) As Long
Declare Function Acm_GpMoveLinearRel Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByRef DistanceArray As Double, ByRef ArrayElements As Long) As Long
Declare Function Acm_GpMoveLinearAbs Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByRef PositionArray As Double, ByRef ArrayElements As Long) As Long
Declare Function Acm_GpMoveDirectRel Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByRef DistanceArray As Double, ByRef ArrayElements As Long) As Long
Declare Function Acm_GpMoveDirectAbs Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByRef PositionArray As Double, ByRef ArrayElements As Long) As Long
Declare Function Acm_GpMoveCircularRel Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByRef CenterArray As Double, ByRef EndArray As Double, _
                ByRef ArrayElements As Long, ByVal Direction As Integer) As Long
Declare Function Acm_GpMoveCircularAbs Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByRef CenterArray As Double, ByRef EndArray As Double, _
                ByRef ArrayElements As Long, ByVal Direction As Integer) As Long
Declare Function Acm_GpMoveCircularRel_3P Lib "ADVMOT.dll" (ByVal GroupHandle As Long, _
                ByRef RefArray As Double, ByRef EndArray As Double, ByRef pArrayElements As Long, ByVal Direction As Integer) As Long
Declare Function Acm_GpMoveCircularAbs_3P Lib "ADVMOT.dll" (ByVal GroupHandle As Long, _
                ByRef RefArray As Double, ByRef EndArray As Double, ByRef pArrayElements As Long, ByVal Direction As Integer) As Long


Declare Function Acm_GpMoveCircularRel_Angle Lib "ADVMOT.dll" (ByVal GroupHandle As Long, _
                ByRef RefArray As Double, ByVal ArcAngle As Integer, ByRef pArrayElements As Long, ByVal Direction As Integer) As Long
Declare Function Acm_GpMoveArcRel_Angle Lib "ADVMOT.dll" (ByVal GroupHandle As Long, _
                ByRef RefArray As Double, ByVal ArcAngle As Double, ByRef pArrayElements As Long, ByVal Direction As Integer) As Long
Declare Function Acm_GpMoveCircularAbs_Angle Lib "ADVMOT.dll" (ByVal GroupHandle As Long, _
                ByRef RefArray As Double, ByVal ArcAngle As Double, ByRef pArrayElements As Long, ByVal Direction As Integer) As Long
Declare Function Acm_GpMoveArcAbs_Angle Lib "ADVMOT.dll" (ByVal GroupHandle As Long, _
                ByRef RefArray As Double, ByVal ArcAngle As Integer, ByRef pArrayElements As Long, ByVal Direction As Integer) As Long
Declare Function Acm_GpMove3DArcRel Lib "ADVMOT.dll" (ByVal GroupHandle As Long, _
                ByRef CenterArray As Double, ByRef EndArray As Double, ByRef pArrayElements As Long, ByVal Direction As Integer) As Long
Declare Function Acm_GpMove3DArcAbs Lib "ADVMOT.dll" (ByVal GroupHandle As Long, _
                ByRef CenterArray As Double, ByRef NVectorArray As Double, ByRef pArrayElements As Long, ByVal Direction As Integer) As Long

Declare Function Acm_GpMove3DArcRel_V Lib "ADVMOT.dll" (ByVal GroupHandle As Long, _
                 ByRef CenterArray As Double, ByRef EndArray As Double, ByVal ArcAngle As Double, ByRef pArrayElements As Long, ByVal Direction As Integer) As Long
                
Declare Function Acm_GpMove3DArcAbs_V Lib "ADVMOT.dll" (ByVal GroupHandle As Long, _
                 ByRef CenterArray As Double, ByRef NVectorArray As Double, ByVal ArcAngle As Double, ByRef pArrayElements As Long, ByVal Direction As Integer) As Long
                
Declare Function Acm_GpLoadPath Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByVal FilePath As String, ByRef PathHandle As Long, ByRef pTotalCount As Long) As Long
Declare Function Acm_GpUnloadPath Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByRef PathHandle As Long) As Long
Declare Function Acm_GpMovePath Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByVal PathHandle As Long) As Long
Declare Function Acm_GpAddPath Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByVal MoveCmd As Integer, ByVal MoveMode As Integer, ByVal FH As Double, ByVal FL As Double, _
                   ByRef EndPoint_DataArray As Double, ByRef CenPoint_DataArray As Double, ByRef ArrayElements As Long) As Long
Declare Function Acm_GpResetPath Lib "ADVMOT.dll" (ByRef GroupHandle As Long) As Long
Declare Function Acm_GpGetPathStatus Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByRef pCurIndex As Long, _
                         ByRef pCurCmdFunc As Long, ByRef pRemainCount As Long, ByRef pFreeSpaceCount As Long) As Long
Declare Function Acm_GpStopDec Lib "ADVMOT.dll" (ByVal GroupHandle As Long) As Long
Declare Function Acm_GpStopEmg Lib "ADVMOT.dll" (ByVal GroupHandle As Long) As Long
Declare Function Acm_GpChangeVel Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByVal newVelocity As Double) As Long
Declare Function Acm_GpChangeVelByRate Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByVal Rate As Long) As Long

Declare Function Acm_GpMoveSelPath Lib "ADVMOT.dll" (ByVal GroupHandle As Long, ByVal PathHandle As Long, ByVal StartIndex As Long, ByVal EndIndex As Long, ByVal Repeat As Long) As Long
' DIO
Declare Function Acm_DaqDiGetByte Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal DiPort As Integer, ByRef ByteData As Byte) As Long
Declare Function Acm_DaqDiGetBit Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal DiChannel As Integer, ByRef BitData As Byte) As Long
Declare Function Acm_DaqDoSetByte Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal DoPort As Integer, ByVal ByteData As Byte) As Long
Declare Function Acm_DaqDoSetBit Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal DoChannel As Integer, ByVal BitData As Byte) As Long
Declare Function Acm_DaqDoGetByte Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal DoPort As Integer, ByRef ByteData As Byte) As Long
Declare Function Acm_DaqDoGetBit Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal DoChannel As Integer, ByRef BitData As Byte) As Long

'mining: Compare functions
Declare Function Acm_AxSetCmpAuto Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal Start As Double, ByVal endPoint As Double, ByVal Interval As Double) As Long
Declare Function Acm_AxGetCmpData Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByRef CmpPosition As Double) As Long
Declare Function Acm_AxSetCmpData Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByVal CmpPosition As Double) As Long
Declare Function Acm_AxSetCmpTable Lib "ADVMOT.dll" (ByVal AxisHandle As Long, ByRef TableArray As Double, ByVal ArrayCount As Long) As Long

'DUJUNLING 2012.11.25
Declare Function Acm_GmOpen Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByRef GMSHandle As Long) As Long
Declare Function Acm_GmClose Lib "ADVMOT.dll" (ByVal GMSHandle As Long) As Long

Declare Function Acm_GmLoadJob Lib "ADVMOT.dll" (ByVal GMSHandle As Long, ByVal JobFilePath As String, ByRef ErrorRow As Long) As Long
Declare Function Acm_GmUploadJob Lib "ADVMOT.dll" (ByVal GMSHandle As Long, ByRef GCodeBuffer As String, ByRef GCodeLength As Long) As Long

Declare Function Acm_GmCommand Lib "ADVMOT.dll" (ByVal GMSHandle As Long, ByVal InputCmd As String) As Long
Declare Function Acm_GmGetCurrentRow Lib "ADVMOT.dll" (ByVal GMSHandle As Long, ByRef CurrentRow As Long) As Long
Declare Function Acm_GmGetCurrentCommand Lib "ADVMOT.dll" (ByVal GMSHandle As Long, ByRef CurrentCmd As String, ByRef CurrentCmdLength As Long) As Long
Declare Function Acm_GmGetState Lib "ADVMOT.dll" (ByVal GMSHandle As Long, ByRef GmsState As Long) As Long
Declare Function Acm_GmGetPattern Lib "ADVMOT.dll" (ByVal GMSHandle As Long, ByVal GmsPatternId As Long, ByRef Buffer As Any, ByRef BufferLength As Long) As Long
Declare Function Acm_GmGetError Lib "ADVMOT.dll" (ByVal GMSHandle As Long, ByRef ErrorCode As Long, ByRef LastError As Long) As Long

'Add by yanli.zhu for ADAM5000 15.01.27

Declare Function Acm_LoadENI Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal FilePath As String) As Long
Declare Function Acm_GetChannelProperty Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal ChannelID As Long, ByVal ProperyID As Long, ByRef Value As Double) As Long
Declare Function Acm_SetChannelProperty Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal ChannelID As Long, ByVal ProperyID As Long, ByVal Value As Double) As Long
Declare Function Acm_DaqAiGetCurrData Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal AiChannel As Integer, ByRef AiData As Single) As Long
Declare Function Acm_DaqAiGetVoltData Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal AiChannel As Integer, ByRef AiData As Single) As Long
                         
Declare Function Acm_DaqAiSpanCalibration Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal AiChannel As Integer) As Long
Declare Function Acm_DaqAiZeroCalibration Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal AiChannel As Integer) As Long
Declare Function Acm_DaqAoGetRawData Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal AoChannel As Integer, ByRef AoData As Integer) As Long
Declare Function Acm_DaqAoGetCurrData Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal AoChannel As Integer, ByRef AoData As Single) As Long
Declare Function Acm_DaqAoGetVoltData Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal AoChannel As Integer, ByRef AoData As Single) As Long
Declare Function Acm_DaqAoSetCurrData Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal AoChannel As Integer, ByVal AoData As Single) As Long
Declare Function Acm_DaqAoSetVoltData Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal AoChannel As Integer, ByVal AoData As Single) As Long
Declare Function Acm_DaqAoCaliDone Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal AoChannel As Integer) As Long
Declare Function Acm_DaqAoSetCaliValue Lib "ADVMOT.dll" (ByVal DeviceHandle As Long, ByVal AoChannel As Integer, ByVal CaliData As Integer) As Long



